--- a/assets/css/default-styles.css
+++ b/assets/css/default-styles.css
@@ -1,16 +1,45 @@
+/* General CSS */
 body {
     font-family: 'Quicksand', sans-serif;
     color: black;
 }
 
+img{
+    max-width:100%;
+	max-height:100%;
+}
+
+h1{
+    font-size: 100%;
+}
+
+h2{
+    font-size: 14px;
+}
+
+h3{
+    font-size: 12px;
+}
+
+.container{
+    background: rebeccapurple;
+    height: 70%;
+    width: 70%;
+    margin: 0 auto;
+}
+
 #menu {
     z-index: 99;
-    margin: 10px 5px;
+    padding: 20px 0px;
     position: absolute;
+    left:50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
 }
 
 #menu li {
-    display: inline-block
+    display: inline-block;
+    margin-left: 20px;
 }
 
 #menu li a {
@@ -18,32 +47,29 @@ body {
     padding: 2px 10px;
     border: 1px solid black;
     border-radius: 5px;
+    width: 20%;
 }
 
-#section0 img,
-#section1 img {
-    margin: 20px 0 0 0;
+#menu li a:hover {
+  /* animation: pulse 300ms ease-in 0s normal infinite; */
+  animation-name: hover-with-ease;
+  animation-duration: 300ms; 
+  /* if you are looking to stop at last frame of animation */
+  animation-fill-mode: forwards;
 }
 
-#section2 img {
-    margin: 20px 0 0 52px;
-}
+@keyframes hover-with-ease {
+    100% {
+      /* background-color: #FF4136; */
+      color: white;
+        border: 1px solid white;
+    }
+  }
+  
 
-#section3 img {
-    bottom: 0px;
-    position: absolute;
-    margin-left: -420px;
-}
-
-.intro p {
-    width: 50%;
+#section0 img{
+    width:10%;
     margin: 0 auto;
-    font-size: 1.5em;
-}
-
-.twitter-share-button {
-    position: absolute;
-    z-index: 99;
-    right: 149px;
-    top: 9px;
+    /* to make it centre */
+    display: block;
 }
