--- a/assets/css/default-styles.css
+++ b/assets/css/default-styles.css
@@ -1,16 +1,36 @@
+/* VV Generic classes */
+.img-circle{
+    border-radius: 50%;
+}
+
+.text-center{
+    text-align: center;
+}
+
+.basic-para{
+    padding: 10px 0px;
+    text-align: center;
+    font-size: 1.5em;
+}
+
 /* General CSS */
 body {
     font-family: 'Quicksand', sans-serif;
     color: black;
 }
 
+a{
+    text-decoration: none;
+    color: black;
+}
 img{
     max-width:100%;
 	max-height:100%;
 }
 
 h1{
-    font-size: 100%;
+    font-size: 3em;
+    padding: 30px 0px;
 }
 
 h2{
@@ -18,17 +38,18 @@ h2{
 }
 
 h3{
-    font-size: 12px;
+    font-size: 1.5em;
+    padding: 10px 0px;
 }
 
 .container{
-    background: rebeccapurple;
+    /* background: rebeccapurple; */
     height: 70%;
     width: 70%;
     margin: 0 auto;
 }
 
-#menu {
+.styled-menu {
     z-index: 99;
     padding: 20px 0px;
     position: absolute;
@@ -37,12 +58,13 @@ h3{
     transform: translateX(-50%);
 }
 
-#menu li {
+.styled-menu li {
     display: inline-block;
-    margin-left: 20px;
+    margin-left: 10px;
 }
 
-#menu li a {
+.styled-menu li a {
+    font-size: 1em;
     color: black;
     padding: 2px 10px;
     border: 1px solid black;
@@ -50,22 +72,14 @@ h3{
     width: 20%;
 }
 
-#menu li a:hover {
-  /* animation: pulse 300ms ease-in 0s normal infinite; */
-  animation-name: hover-with-ease;
-  animation-duration: 300ms; 
-  /* if you are looking to stop at last frame of animation */
-  animation-fill-mode: forwards;
-}
+.styled-menu li a:hover {
+  /* animation name - duration - stop anim at end */
+  animation: hover-with-ease 300ms forwards;
+}  
 
-@keyframes hover-with-ease {
-    100% {
-      /* background-color: #FF4136; */
-      color: white;
-        border: 1px solid white;
-    }
+#section0{
+      text-align: center;
   }
-  
 
 #section0 img{
     width:10%;
@@ -73,3 +87,66 @@ h3{
     /* to make it centre */
     display: block;
 }
+
+/* --------------------------------------------------- */
+/* OUR TEAM PAGE */ 
+.team-row{
+    padding: 20px 0px;
+    text-align: center;
+}
+
+.team-row .person-info-container{
+    width: 180px;
+    margin: 10px 10px auto;
+    display: inline-block;
+    border: 1px solid white;
+    border-radius: 10px;
+    padding: 5px;
+    background: white;   
+}
+
+.team-row .person-info-container img{
+    height: 150px;
+    width: 150px;
+}
+.team-row .person-info-container h3{
+    height: 50px;
+}
+
+/* .person-info-container{ */
+/* } */
+
+/* .person-info-container img:hover{ */
+    /* animation: zoom-in-face 500ms forwards; */
+/* } */
+
+/* --------------------------------------------------- */
+
+/* contact page */
+.contacts-list{
+    font-size: 2.5em;
+    padding: 20px 0px;
+}
+
+.contacts-list li{
+    padding: 5px 10px;
+    display: inline-block;
+}
+
+/* --------------------------------------------------- */
+
+/* Animations */
+
+@keyframes hover-with-ease {
+    100% {
+    /* background-color: #FF4136; */
+    color: white;
+    border: 1px solid white;
+    }
+  }
+
+  @keyframes zoom-in-face {
+    100% {
+    border:5px solid white;
+    }
+  }
