--- a/assets/css/default-styles.css
+++ b/assets/css/default-styles.css
@@ -8,6 +8,7 @@
 }
 
 .basic-para{
+    color: white;
     padding: 10px 0px;
     text-align: center;
     font-size: 1.5em;
@@ -29,15 +30,18 @@ img{
 }
 
 h1{
+    color: white;
     font-size: 3em;
     padding: 30px 0px;
 }
 
 h2{
+    color: white;
     font-size: 14px;
 }
 
 h3{
+    color: white;
     font-size: 1.5em;
     padding: 10px 0px;
 }
@@ -65,9 +69,9 @@ h3{
 
 .styled-menu li a {
     font-size: 1em;
-    color: black;
+    color: white;
     padding: 2px 10px;
-    border: 1px solid black;
+    border: 1px solid white;
     border-radius: 5px;
     width: 20%;
 }
@@ -86,6 +90,27 @@ h3{
     margin: 0 auto;
     /* to make it centre */
     display: block;
+}
+
+/* --------------------------------------------------- */
+#motto{
+font-style: italic;
+color: white;
+padding: 10px 5px;
+}
+/* --------------------------------------------------- */
+/* SLIDES YAY */
+.slide{
+    color: white;
+    z-index: 100;
+    text-align: center;
+}
+.slide img{
+    /* z-index: -1; */
+    /* position: absolute; */
+    height: 70%;
+    /* top:30%; */
+    /* left: 23%; */
 }
 
 /* --------------------------------------------------- */
@@ -111,6 +136,7 @@ h3{
 }
 .team-row .person-info-container h3{
     height: 50px;
+    color: black;
 }
 
 /* .person-info-container{ */
@@ -139,9 +165,9 @@ h3{
 
 @keyframes hover-with-ease {
     100% {
-    /* background-color: #FF4136; */
-    color: white;
-    border: 1px solid white;
+    background-color: white;
+    color: inherit;
+    border: 1px solid inherit;
     }
   }
 
