--- a/assets/css/default-styles.css
+++ b/assets/css/default-styles.css
@@ -37,7 +37,8 @@ h1{
 
 h2{
     color: white;
-    font-size: 14px;
+    font-size: 2.2em;
+    padding: 20px 0px;
 }
 
 h3{
@@ -85,7 +86,7 @@ h3{
       text-align: center;
   }
 
-#section0 img{
+.logo-standard{
     width:10%;
     margin: 0 auto;
     /* to make it centre */
@@ -98,6 +99,24 @@ font-style: italic;
 color: white;
 padding: 10px 5px;
 }
+
+/* --------------------------------------------------- */
+.clients-row{
+    /* background: rebeccapurple; */
+    padding: 20px 0px;
+    text-align: center;
+}
+.clients-row .img-container{
+    display: inline-block;
+}
+.clients-row .img-container img{
+    height: 40px;
+    border: 1px solid #4d4d4d;
+    border-radius: 5px;
+    padding: 5px;
+    background: #4d4d4d;
+}
+
 /* --------------------------------------------------- */
 /* SLIDES YAY */
 .slide{
@@ -105,12 +124,9 @@ padding: 10px 5px;
     z-index: 100;
     text-align: center;
 }
+
 .slide img{
-    /* z-index: -1; */
-    /* position: absolute; */
     height: 70%;
-    /* top:30%; */
-    /* left: 23%; */
 }
 
 /* --------------------------------------------------- */
