--- a/assets/css/default-styles.css
+++ b/assets/css/default-styles.css
@@ -49,7 +49,6 @@ h3 {
 }
 
 .container {
-    /* background: rebeccapurple; */
     height: 70%;
     width: 70%;
     margin: 0 auto;
@@ -66,7 +65,7 @@ h3 {
 
 .styled-menu li {
     display: inline-block;
-    margin-left: 10px;
+    margin: 10px;
 }
 
 .styled-menu li a {
@@ -103,7 +102,6 @@ h3 {
 
 /* --------------------------------------------------- */
 .clients-row {
-    /* background: rebeccapurple; */
     padding: 20px 0px;
     text-align: center;
 }
@@ -114,10 +112,9 @@ h3 {
 
 .clients-row .img-container img {
     height: 40px;
-    border: 1px solid #4d4d4d;
+    border: 1px solid white;
     border-radius: 5px;
     padding: 5px;
-    background: #4d4d4d;
 }
 
 /* --------------------------------------------------- */
@@ -129,7 +126,8 @@ h3 {
 }
 
 .slide img {
-    height: 70%;
+    max-height: 90%;
+    border-radius: 10px;
 }
 
 /* --------------------------------------------------- */
@@ -141,17 +139,33 @@ h3 {
 
 .team-row .person-info-container {
     width: 180px;
-    margin: 10px 10px auto;
+    margin: 10px;
     display: inline-block;
     border: 1px solid white;
     border-radius: 10px;
-    padding: 5px;
+    padding: 10px 5px;
     background: white;
 }
 
 .team-row .person-info-container img {
     height: 150px;
     width: 150px;
+}
+
+#red-circle {
+    border: 5px solid #db3236;
+}
+
+#blue-circle {
+    border: 5px solid #4885ed;
+}
+
+#green-circle {
+    border: 5px solid #3cba54;
+}
+
+#yellow-circle {
+    border: 5px solid #f4c20d;
 }
 
 .team-row .person-info-container h3 {
