--- a/assets/css/default-styles.css
+++ b/assets/css/default-styles.css
@@ -111,10 +111,11 @@ h3 {
 }
 
 .clients-row .img-container img {
-    height: 40px;
+    height: 50px;
     border: 1px solid white;
     border-radius: 5px;
     padding: 5px;
+    margin: 10px 5px;
 }
 
 /* --------------------------------------------------- */
